--- a/better_quiz_project/index.html
+++ b/better_quiz_project/index.html
@@ -38,7 +38,7 @@
           </p>
           <div class="answer1">
             <input type="radio" name="q2" id="q2-a1" value="A" checked />
-            <label for="q1">Kyrgzystan</label>
+            <label for="q2-a1">Kyrgzystan</label>
           </div>
           <div class="answer2">
             <input type="radio" name="q2" id="q2-a2" value="B" />
